# pytorch-course

./: .gitignore  00_pytorch_fundamentals.ipynb  00_pytorch_fundamentals_exercises.ipynb  01_pytorch_workflows_fundamentals.ipynb  01_pytorch_workflows_fundamentals_exercises.ipynb  02_pytorch_classification.ipynb  02_pytorch_classification_exercises.ipynb  03_pytorch_computer_vision.ipynb  03_pytorch_computer_vision_exercises.ipynb  04_pytorch_datasets.ipynb  04_pytorch_datasets_exercises.ipynb  06_pytorch_transfer_learning.ipynb  10_pytorch_2.ipynb  README.md  pyproject.toml
05_pytorch_going_modular/: 05_pytorch_going_modular_cell_mode.ipynb  05_pytorch_going_modular_script_mode.ipynb
05_pytorch_going_modular_exercises/: 05_pytorch_going_modular_exercises.ipynb
06_pytorch_transfer_learning/: 05_pytorch_going_modular_exercises.ipynb  06_pytorch_transfer_learning.ipynb
06_pytorch_transfer_learning_exercises/: 06_pytorch_transfer_learning_exercises.ipynb
07_pytorch_experiment_tracking/: 07_pytorch_experiment_tracking.ipynb
07_pytorch_experiment_tracking_exercises/: 07_pytorch_experimet_tracking_exercises.ipynb
08_pytorch_paper_replicating/: 08_pytorch_paper_replicating.ipynb
08_pytorch_paper_replicating_exercises/: 08_pytorch_paper_replicating_exercises.ipynb
09_pytorch_model_deployment/: 09_pytorch_model_deployment.ipynb
09_pytorch_model_deployment_exercises/: 09_pytorch_model_deployment_exercises.ipynb
models/: 01_pytorch_workflow_model_1.pth  01_pytorch_workflows_exercises_model.ipynb  01_pytorch_workflows_model_0.pth  (+2 more)
(+1896 files in other folders)
