[project]
name = "pytorch-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.44.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "notebook>=7.4.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.7.4",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
